# AImong-us

./: .gitignore  README.md  next.config.js  package.json
aigent/: Cargo.toml  README.md  app.py  dockerfile
aigent/src/: main.rs
aimongus_types/: Cargo.toml
aimongus_types/bindings/: Answer.ts  ChatMessage.ts  ClientGameState.ts  ClientGameStateView.ts  ClientResponse.ts  LobbyResponses.ts  Player.ts  Points.ts  PublicRoom.ts  SessionId.ts  VoteResult.ts
aimongus_types/src/: client_to_server.rs  server_to_client.rs
backstab/: Cargo.toml  README.md  dockerfile  run.sh
backstab/bindings/: Answer.ts  ClientGameState.ts  ClientGameStateView.ts  ClientIdentity.ts  ClientResponse.ts  ExtractClientState.ts  InGameClientGameState.ts  InGameClientResponses.ts  Session.ts
backstab/src/: main.rs
backstab/src/objects/: client_to_server.rs  mod.rs  server_to_client.rs  server_to_server.rs
components/: GameIsland.tsx  avatars.tsx  chat.tsx  loggedInFlow.tsx  loggedOutFlow.tsx  mainWrapper.tsx  modal.tsx  tinylabel.tsx
components/games/aimongus/: creating-game.tsx  findingPlayers.tsx  joining-game.tsx  lobby.tsx  profile-picker.tsx  questionAnswering.tsx  star.tsx  timer.tsx  voting.tsx  votingResults.tsx
components/games/oddBotOut/: activeGame.tsx  classic.tsx  findingPlayers.tsx  lobby.tsx  questionAnswering.tsx  startingGame.tsx  voting.tsx  votingResults.tsx
components/games/turingChat/: turingChat.tsx
components/notification/: Notification.tsx  NotificationContext.tsx
components/shared/: answerCard.tsx
lib/: common-classes.ts  constants.ts  emojis.ts  shuffle.ts  states.ts
lib/hooks/: usChannel.ts  useLocalStorage.ts  useUser.ts  useWebhook.ts
openai/: Cargo.toml
openai/src/: openai.rs
pages/: _app.tsx  creating-game.tsx  game.tsx  index.tsx  joining-game.tsx
pages/api/: getAvaliableChatRoom.ts  gpt3.ts
pages/api/odd-bot-out/: game.ts
pages/api/odd-bot-out/answer/[id]/: vote.ts  votes.ts
pages/api/odd-bot-out/questions/[id]/: answer.ts
pages/api/oddBotOut/: getGame.ts
pages/api/oddBotOut/[id]/: index.ts  questions.ts
pages/api/oddBotOut/questions/[id]/: answer.ts
pages/chat/: [id].tsx
pages/odd-bot-out/: [id].tsx
styles/: globals.css
supabase/: config.toml  database.types.ts
supabase/migrations/: 20230401004351_init.sql  20230401200036_init.sql  20230401213244_fetch_game.sql  20230401235416_answers.sql  20230402080803_load_new_question.sql  20230402183142_view_answers.sql  20230402191657_cast_votes.sql  20230402194415_cast_votes.sql  20230402215523_new_state_starting_game.sql  20230410001418_last_update.sql
