[package]
name = "aigent"
version = "0.1.0"
edition = "2021"

[dependencies]
futures-channel = "0.3.28"
futures-util = "0.3.28"
tokio = { version = "1.28.0", features = [
    "macros",
    "rt",
    "io-std",
    "rt-multi-thread",
] }
tokio-tungstenite = "0.18.0"
url = "2.3.1"
aimongus_types = { path = "../aimongus_types" }
rand = "0.8.5"
reqwest = "0.11.16"
serde = "1.0.160"
serde_json = "1.0.96"
